--- a/Chrome_Ext/manifest.json
+++ b/Chrome_Ext/manifest.json
@@ -5,10 +5,17 @@
   "content_scripts": [ {
     "matches": ["<all_urls>"],
     "js": [
-      "jquery-3.5.1.min.js", 
+      "jquery-3.5.1.min.js",
       "popup.js"
     ]
   } ],
+  "background": {
+    "persistent": false,
+    "scripts": [
+      "jquery-3.5.1.min.js",
+      "background.js"
+    ]
+  },
   "permissions": [
     "activeTab",
     "storage"
