--- a/Chrome_Ext/manifest.json
+++ b/Chrome_Ext/manifest.json
@@ -4,7 +4,8 @@
   "description" : "Magento Chrome Extension",
   "permissions": [
     "activeTab",
-    "storage"
+    "storage",
+    "browsingData"
   ],
   "browser_action": {
      "default_icon": "icon.png",
