--- a/Mage_Module/IncognitoGeeks/ChromeExt/composer.json
+++ b/Mage_Module/IncognitoGeeks/ChromeExt/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "IncognitoGeeks/chrome-ext",
+  "name": "igeeks/m2-module-igeeks-browser-ext",
   "version": "1.0.0",
   "description": "Magento 2 developer module for supporting browser extension",
   "type": "magento2-module",
@@ -11,7 +11,7 @@
       "registration.php"
     ],
     "psr-4": {
-      "IncognitoGeeks\\HelloWorld\\": ""
+      "IncognitoGeeks\\ChromeExt\\": ""
     }
   }
 }
